--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,6 @@ a {
 
 #bio-image {
     margin-left: 20px;
-    width: 200px;
     height: 215px;
 }
 
